manifest/log-pilot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: log-pilot-deploy
    labels:
        app: log-pilot
spec:
    replicas: 1
    selector:
        matchLabels:
            app: log-pilot
    template:
        metadata:
            labels:
                app: log-pilot
        spec:
            containers:
                - name: log-pilot
                  image: jeongrae/ainfras-logpilot:v2
                  ports:
                      - containerPort: 8080
---
#Service
apiVersion: v1
kind: Service
metadata:
    name: log-pilot-svc
    labels:
        app: log-pilot
spec:
    selector:
        app: log-pilot
    ports:
        - protocol: TCP
          port: 5050
          targetPort: 5050
    type: ClusterIP
