manifest/mariadb.yaml
---
#StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: mariadb
spec:
    selector:
        matchLabels:
            app: mariadb
    serviceName: "mariadb"
    replicas: 1
    template:
        metadata:
            labels:
                app: mariadb
        spec:
            containers:
                - image: mariadb:10.6
                  name: mariadb
                  ports:
                      - containerPort: 3306
                        name: mariadb
                  volumeMounts:
                      - name: mariadb-storage
                        mountPath: /var/lib/mysql
            volumes:
                - name: mariadb-storage
                  persistentVolumeClaim:
                      claimName: mariadb-pvc
---
#Service
apiVersion: v1
kind: Service
metadata:
    name: mariadb-svc
    labels:
        app: mariadb
spec:
    selector:
        app: mariadb
    ports:
        - protocol: TCP
          port: 3306
          targetPort: 3306
    type: ClusterIP
