manifest/target-svr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: spring-app-deploy
    labels:
        app: spring-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: spring-app
    template:
        metadata:
            labels:
                app: spring-app
        spec:
            containers:
                - name: spring-app
                  image: jeongrae/ainfras-target:latest
                  ports:
                      - containerPort: 5050
                  volumeMounts:
                      - name: log-volume
                        mountPath: /app/log
                - name: log-pilot
                  image: jeongrae/ainfras-logpilot:v2
                  ports:
                      - containerPort: 8080
                  volumeMounts:
                      - name: log-volume
                        mountPath: /app/log
            volumes:
                - name: log-volume
                  emptyDir: {}
---
#Service
apiVersion: v1
kind: Service
metadata:
    name: spring-app-svc
    labels:
        app: spring-app
spec:
    selector:
        app: spring-app
    ports:
        - protocol: TCP
          port: 5050
          targetPort: 5050
    type: ClusterIP
---
#Service
apiVersion: v1
kind: Service
metadata:
    name: log-pilot-svc
    labels:
        app: spring-app
spec:
    selector:
        app: spring-app
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
    type: ClusterIP
