manifest/ingress-nginx.yaml
---
#Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: combined-ingress
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: /parsing
                    pathType: Prefix
                    backend:
                        service:
                            name: log-pilot-svc
                            port:
                                number: 8080
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: spring-app-svc
                            port:
                                number: 5050
